[package]
name = "sanity"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["json"]
json = ["serde", "serde_json", "reqwest/json"]
